# html_of_jsx

./: .gitattributes  .gitignore  .ocamlformat  AGENTS.md  CHANGES.md  HTMX-mode.html  Htmx-Extensions-Class_tools.html  Htmx-Extensions-Head_support.html  Htmx-Extensions-Loading_states.html  Htmx-Extensions-Path_deps.html  Htmx-Extensions-Preload.html  Htmx-Extensions-Response_targets.html  Htmx-Extensions-SSE.html  Htmx-Extensions-WS.html  Htmx-Extensions.html  Htmx.html  JSX.html  LICENSE.md  Makefile  Ppx.html  README.md  React-compatibility.html  core.html  dream.html  dune  dune-project  getting-started.html  how-ppx-works.html  html-jsx.opam  html_of_jsx.opam  index.html  index.mld  ppx.html
.cursor/design/: STATIC_ANALYSIS_OPTIMIZATIONS.md
.github/scripts/: create-release.sh
.github/scripts/release/: LICENSE  README.md  action.yml  changelog.test.ts  changelog.ts  main.ts  package-lock.json  package.json  test-local.sh  tsconfig.json
.github/scripts/release/test/: run-tests.sh
.github/scripts/release/test/fixtures/invalid-opam/: broken.opam
.github/scripts/release/test/fixtures/valid-project/: CHANGES.md  test-package.opam
.github/workflows/: ci.yml  release.yml  test-release-action.yml
_demo/: dune  server.re
assets/: index.css  site.css  site.js
bench/: OPTIMIZATION_SUMMARY.md  README.md  bench.ml  bench.mlx  bench_fast.mlx  compare_results.ml  compile_bench.ml  dune  input.re  memory.ml  optimization_log.md  run_benchmark.sh
bench/compile_fixtures/attr_heavy/: attr_heavy.mlx  dune
bench/compile_fixtures/large_mixed/: dune  gen.ml  large_mixed.mlx
bench/compile_fixtures/nested_mixed/: dune  nested_mixed.mlx
bench/compile_fixtures/static_heavy/: dune  static_heavy.mlx
bench/results/: baseline.json  compile_baseline.json  opt1_buffer_4k.json  opt1_buffer_size.json  opt2_escape_lookup.json  opt3_compiler_flags.json  opt4_bprintf.json
bench/scenarios/: Blog.mlx  Cx.mlx  Dashboard.mlx  DeepTree.mlx  Ecommerce.mlx  Form.mlx  PropsHeavy.mlx  ShallowTree.mlx  Table.mlx  Trivial.mlx  WideTree.mlx  dune
demo/: HTMLMock.re  Index.re  bench.ml  client.re  dune  htmx_demo.re  mlx_demo.mlx  server.re  styles.re
dev/bench/: data.js
doc/: dune  index.mld
docs/: HTMX-mode.mld  React-compatibility.mld  components.mld  core.mld  dream.mld  dune  features.mld  getting-started.mld  how-ppx-works.mld  htmx.mld  index.mld  melange.mld  performance_guide.md  ppx.mld  react.mld  rendering.mld  safety.mld
docs/content/: HTMX-mode.md  Htmx-Extensions-Class_tools.md  Htmx-Extensions-Head_support.md  Htmx-Extensions-Loading_states.md  Htmx-Extensions-Path_deps.md  Htmx-Extensions-Preload.md  Htmx-Extensions-Response_targets.md  Htmx-Extensions-SSE.md  Htmx-Extensions-WS.md  Htmx-Extensions.md  Htmx.md  JSX.md  Ppx.md  React-compatibility.md  core.md  dream.md  dune  getting-started.md  how-ppx-works.md  index.md  ppx.md
html_of_jsx/: HTMX-mode.html  React-compatibility.html  core.html  dream.html  features.html  getting-started.html  how-ppx-works.html  htmx.html  index.html  melange.html  ppx.html  react.html
html_of_jsx/Html/: index.html
html_of_jsx/Html_of_jsx/: index.html
html_of_jsx/Htmx/: index.html
html_of_jsx/Htmx/Extensions/: index.html
html_of_jsx/Htmx/Extensions/Class_tools/: index.html
html_of_jsx/Htmx/Extensions/Head_support/: index.html
html_of_jsx/Htmx/Extensions/Loading_states/: index.html
html_of_jsx/Htmx/Extensions/Path_deps/: index.html
html_of_jsx/Htmx/Extensions/Preload/: index.html
html_of_jsx/Htmx/Extensions/Response_targets/: index.html
html_of_jsx/Htmx/Extensions/SSE/: index.html
html_of_jsx/Htmx/Extensions/WS/: index.html
html_of_jsx/JSX/: index.html
html_of_jsx/JSX/Debug/: index.html
html_of_jsx/JSX/Html/: index.html
html_of_jsx/Jsx/: index.html
html_of_jsx/Jsx/Attribute/: index.html
html_of_jsx/Ppx/: index.html
htmx/: Htmx.ml  Htmx.mli  dune
lib/: Attribute.ml  Element.ml  Encoding.ml  Html.ml  Html_of_jsx.ml  Html_of_jsx.mli  JSX.ml  JSX.mli  Jsx.ml  Jsx.mli  Ppx_static_attributes.ml  Rope.ml  Static_attributes.ml  dune  ppx.ml
lib2/: Html.ml  Html.mli  JSX_mel.ml  dune
ppx/: Ppx_alpinejs.ml  Ppx_attributes.ml  Ppx_extra_attributes.ml  Ppx_html.ml  Ppx_htmx.ml  Ppx_react.ml  dune  extra_attributes.ml  extra_htmx.ml  extra_react.ml  html.ml  html_attributes.ml  ppx.ml  static_analysis.ml
site/: build_site.mlx  dune  main.mlx
site/assets/: fonts.css  index.css  index.js
test/: Test.ml  Test_htmx.re  Test_mlx.mlx  Test_pp.ml  Test_reason.re  Test_render.ml  Test_with_reason.re  Test_without_transformation.ml  dune  main.ml
test/cram/: dune  ppx.sh
test/cram/_lower.t/: run.t
test/cram/attribute_not_found.t/: input.re  run.t
test/cram/component.t/: input.re  run.t
test/cram/disable-buffer-estimation.t/: input.re  run.t
test/cram/disable-optional-attrs-opt.t/: input.re  run.t
test/cram/disable-static-opt.t/: input.re  run.t
test/cram/lower.t/: input.re  run.t
test/cram/no-static-opt.t/: input.re  run.t
test/cram/react-flag-ko.t/: run.t
test/cram/react-flag-ok.t/: run.t
test/cram/static-opt.t/: input.re  run.t
test/cram/upper.t/: input.re  run.t
test/disable_static_opt/: dune  test_disable_static_opt.re
test/lib/: Test_lib.re  dune
