(executable
 (name bench)
 (modules bench)
 (libraries html_of_jsx benchmark scenarios str)
 (preprocess
  (pps html_of_jsx.ppx)))

(executable
 (name memory)
 (modules memory)
 (libraries html_of_jsx))

(executable
 (name compare_results)
 (modules compare_results)
 (libraries str))

(executable
 (name compile_bench)
 (modules compile_bench)
 (libraries unix str))
